--- a/index.html
+++ b/index.html
@@ -68,6 +68,7 @@
         </h1>
         <div class="subheading mb-5">B7 Susheel Villa · Panvel, IN 410206 · (986) 999-0548 ·
           <a href="mailto:digant.dg07@gmail.com">digant.dg07@gmail.com</a>
+          <p>(Website in Progress ;)</p>
         </div>
         <!-- <p class="lead mb-5">I am experienced in leveraging agile frameworks to provide a robust synopsis for high level overviews. Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition.</p> -->
         <div class="social-icons">
