--- a/index.html
+++ b/index.html
@@ -80,10 +80,10 @@
           </a>
           <!-- <a href="#">
             <i class="fab fa-twitter"></i>
-          </a>
-          <a href="#">
-            <i class="fab fa-facebook-f"></i>
           </a> -->
+          <a href="#">
+            <i class="fab fa-instagram"></i>
+          </a>
         </div>
       </div>
     </section>
