--- a/index.html
+++ b/index.html
@@ -50,6 +50,9 @@
           <a class="nav-link js-scroll-trigger" href="#skills">Skills</a>
         </li>
         <li class="nav-item">
+          <a class="nav-link js-scroll-trigger" href="#projects">Projects</a>
+        </li>
+        <li class="nav-item">
           <a class="nav-link js-scroll-trigger" href="#interests">Interests</a>
         </li>
         <li class="nav-item">
@@ -78,9 +81,9 @@
           <a href="https://github.com/digantgarude" target="_blank">
             <i class="fab fa-github"></i>
           </a>
-          <!-- <a href="#">
-            <i class="fab fa-twitter"></i>
-          </a> -->
+          <a href="https://api.whatsapp.com/send?phone=+919869990548&amp;forceIntent=true&amp;load=loadInIOSExternalSafari">
+            <i class="fab fa-whatsapp"></i>
+          </a>
           <a href="#">
             <i class="fab fa-instagram"></i>
           </a>
@@ -99,7 +102,7 @@
             <h3 class="mb-0">Deep Learning Intern</h3>
             <div class="subheading mb-3">Concerto Software & Systems</div>
             <p>Worked on the following projects :</p>
-            <ul>
+            <ul class="mb-0 project-li">
               <li>AI based ATM camera survelliance to detect multiple people and other unexpected actions.</li>
               <li>Voice based BHIM UPI app as part of Hackathon organized by National Payments Corporation Of India (NPCI) wherein our team ranked amongst the top 15 finalists all over India.</li>
               <li></li>
@@ -151,26 +154,26 @@
             <h3 class="mb-0">University of Mumbai</h3>
             <div class="subheading mb-3">Bachelor of Engineering</div>
             <div>Major : Computer Engineering</div>
-            <p>Final GPA: 8.81/10</p>
-            <p>CGPA: 8.08/10</p>
+            <div>Final GPA: 8.81/10</div>
+            <div>CGPA: 8.08/10</div>
           </div>
           <div class="resume-date text-md-right">
             <span class="text-primary">August 2006 - May 2010</span>
           </div>
         </div>
 
-        <div class="resume-item d-flex flex-column flex-md-row justify-content-between">
+        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
             <h3 class="mb-0">C.K.T. Junior College</h3>
-            <div class="subheading mb-3">Major : Computer Science</div>
-            <p>Percentage: 82.46% (Class: Distinction)</p>
+            <div>Major : Computer Science</div><!-- subheading mb-3 -->
+            <div>Percentage: 82.46% (Class: Distinction)</div>
           </div>
           <div class="resume-date text-md-right">
             <span class="text-primary">June 2013 - May 2015</span>
           </div>
         </div>
 
-        <div class="resume-item d-flex flex-column flex-md-row justify-content-between">
+        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
             <h3 class="mb-0">St. Joseph's High School</h3>
             <!-- <div class="subheading mb-3">Computer Science</div>-->
@@ -190,47 +193,47 @@
       <div class="w-100">
         <h2 class="mb-5">Skills</h2>
 
-        <div class="subheading mb-3">Programming Languages &amp; Tools</div>
-        <ul class="list-inline dev-icons">
-          <li class="list-inline-item">
-            <i class="fab fa-html5"></i>
-          </li>
-          <li class="list-inline-item">
-            <i class="fab fa-css3-alt"></i>
-          </li>
-          <li class="list-inline-item">
-            <i class="fab fa-js-square"></i>
-          </li>
-          <li class="list-inline-item">
-            <i class="fab fa-angular"></i>
-          </li>
-          <li class="list-inline-item">
-            <i class="fab fa-react"></i>
-          </li>
-          <li class="list-inline-item">
-            <i class="fab fa-node-js"></i>
-          </li>
-          <li class="list-inline-item">
-            <i class="fab fa-sass"></i>
-          </li>
-          <li class="list-inline-item">
-            <i class="fab fa-less"></i>
-          </li>
-          <li class="list-inline-item">
-            <i class="fab fa-wordpress"></i>
-          </li>
-          <li class="list-inline-item">
-            <i class="fab fa-gulp"></i>
-          </li>
-          <li class="list-inline-item">
-            <i class="fab fa-grunt"></i>
-          </li>
-          <li class="list-inline-item">
-            <i class="fab fa-npm"></i>
-          </li>
+        <div class="subheading mb-3">Programming Languages</div>
+        <ul class="list-inline">
+          <li class="list-inline-item skills-btn-look">Python</li>
+          <li class="list-inline-item skills-btn-look">C</li>
+          <li class="list-inline-item skills-btn-look">C++</li>
+          <li class="list-inline-item skills-btn-look">Java</li>
+          <li class="list-inline-item skills-btn-look">PHP</li>
+          <li class="list-inline-item skills-btn-look">SQL</li>
+          <li class="list-inline-item skills-btn-look">JavaScript</li>
+          <li class="list-inline-item skills-btn-look">HTML5</li>
+          <li class="list-inline-item skills-btn-look">CSS3</li>
+          <li class="list-inline-item skills-btn-look">Bash</li>
+          <li class="list-inline-item skills-btn-look">Arduino</li>
         </ul>
 
-        <!-- <div class="subheading mb-3">Workflow</div>
+        <div class="subheading mb-3">Frameworks</div>
+        <ul class="list-inline">
+          <li class="list-inline-item skills-btn-look">Tensorflow</li>
+          <li class="list-inline-item skills-btn-look">Keras</li>
+          <li class="list-inline-item skills-btn-look">Django</li>
+          <li class="list-inline-item skills-btn-look">jQuery</li>
+          <li class="list-inline-item skills-btn-look">AJAX</li>
+          <li class="list-inline-item skills-btn-look">Bootstrap</li>
+        </ul>
+
+        <div class="subheading mb-3">Other Technologies</div>
+        <ul class="list-inline">
+          <li class="list-inline-item skills-btn-look">Android Studio</li>
+          <li class="list-inline-item skills-btn-look">Github</li>
+          <li class="list-inline-item skills-btn-look">Firebase</li>
+          <li class="list-inline-item skills-btn-look">R Studio</li>
+          <li class="list-inline-item skills-btn-look">Xampp</li>
+          <li class="list-inline-item skills-btn-look">Atlassian</li>
+          <li class="list-inline-item skills-btn-look">Google Cloud SDK</li>
+          <li class="list-inline-item skills-btn-look">Jupyter Notebook</li>
+          <li class="list-inline-item skills-btn-look">Spyder</li>
+          <li class="list-inline-item skills-btn-look">Oracle DB</li>
+          <li class="list-inline-item skills-btn-look">Weka</li>
+          <li class="list-inline-item skills-btn-look">Octave</li>
+        </ul>
+        <div class="subheading mb-3">Workflow</div>
         <ul class="fa-ul mb-0">
           <li>
             <i class="fa-li fa fa-check"></i>
@@ -244,12 +247,22 @@
           <li>
             <i class="fa-li fa fa-check"></i>
             Agile Development &amp; Scrum</li>
-        </ul> -->
+        </ul>
       </div>
     </section>
 
     <hr class="m-0">
 
+    <!-- PROJECTS -->
+    <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="projects">
+      <div class="w-100">
+        <h2 class="mb-5">Projects</h2>
+        
+      </div>
+    </section>
+
+
+    <!-- INTERESTS -->
     <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="interests">
       <div class="w-100">
         <!-- <h2 class="mb-5">Interests</h2>
