--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
           <a class="nav-link js-scroll-trigger" href="#interests">Interests</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link js-scroll-trigger" href="#awards">Awards</a>
+          <a class="nav-link js-scroll-trigger" href="#courses">Courses</a>
         </li>
       </ul>
     </div>
@@ -105,8 +105,9 @@
             <ul class="mb-0 project-li">
               <li>AI based ATM camera survelliance to detect multiple people and other unexpected actions.</li>
               <li>Voice based BHIM UPI app as part of Hackathon organized by National Payments Corporation Of India (NPCI) wherein our team ranked amongst the top 15 finalists all over India.</li>
-              <li></li>
+              <li>Automatic trash detection in ATM using survelliance cameras. (Currently Working)</li>
             </ul>
+            <p><b>Technologies Used in above projects:</b> Python, Tensorflow, Keras, Open CV, Matplotlib, Yolo Darknet Algorithm, Android Studio. </p>
           </div>
           <div class="resume-date text-md-right">
             <span class="text-primary">November 2019 - Present</span>
@@ -233,7 +234,7 @@
           <li class="list-inline-item skills-btn-look">Weka</li>
           <li class="list-inline-item skills-btn-look">Octave</li>
         </ul>
-        <div class="subheading mb-3">Workflow</div>
+        <!-- <div class="subheading mb-3">Workflow</div>
         <ul class="fa-ul mb-0">
           <li>
             <i class="fa-li fa fa-check"></i>
@@ -247,7 +248,7 @@
           <li>
             <i class="fa-li fa fa-check"></i>
             Agile Development &amp; Scrum</li>
-        </ul>
+        </ul> -->
       </div>
     </section>
 
@@ -265,47 +266,84 @@
     <!-- INTERESTS -->
     <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="interests">
       <div class="w-100">
-        <!-- <h2 class="mb-5">Interests</h2>
-        <p>Apart from being a web developer, I enjoy most of my time being outdoors. In the winter, I am an avid skier and novice ice climber. During the warmer months here in Colorado, I enjoy mountain biking, free climbing, and kayaking.</p>
+        <h2 class="mb-5">Interests</h2>
+        <!-- <p>Apart from being a web developer, I enjoy most of my time being outdoors. In the winter, I am an avid skier and novice ice climber. During the warmer months here in Colorado, I enjoy mountain biking, free climbing, and kayaking.</p>
         <p class="mb-0">When forced indoors, I follow a number of sci-fi and fantasy genre movies and television shows, I am an aspiring chef, and I spend a large amount of my free time exploring the latest technology advancements in the front-end web development world.</p> -->
       </div>
     </section>
 
     <hr class="m-0">
 
-    <!-- <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="awards">
+    <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="courses">
       <div class="w-100">
-        <h2 class="mb-5">Awards &amp; Certifications</h2>
-        <ul class="fa-ul mb-0">
+        <h2 class="mb-5">Courses / Certifications</h2>
+
+        <div class="subheading mb-3">Courses</div>
+        <ul class="fa-ul mb-0 courses-part">
           <li>
-            <i class="fa-li fa fa-trophy text-warning"></i>
-            Google Analytics Certified Developer</li>
+            <i class="fa-li fa fa-trophy text-primary"></i>
+            Deep Learning Specialization - By Coursera</li>
           <li>
-            <i class="fa-li fa fa-trophy text-warning"></i>
-            Mobile Web Specialist - Google Certification</li>
+            <i class="fa-li fa fa-trophy text-primary"></i>
+            Baseline AI, ML, Data by Google Qwiklabs.
+            </li>
           <li>
-            <i class="fa-li fa fa-trophy text-warning"></i>
-            1<sup>st</sup>
-            Place - University of Colorado Boulder - Emerging Tech Competition 2009</li>
+            <i class="fa-li fa fa-trophy text-primary"></i>
+            Microsoft Technology Associate in Security
+            Fundamentals.</li>
           <li>
-            <i class="fa-li fa fa-trophy text-warning"></i>
-            1<sup>st</sup>
-            Place - University of Colorado Boulder - Adobe Creative Jam 2008 (UI Design Category)</li>
+            <i class="fa-li fa fa-trophy text-primary"></i>
+            Computer Hardware Essentials - from JetKing</li>
+          
+        </ul>
+
+        <div class="subheading mb-3">Certificates</div>
+        <ul class="fa-ul mb-0 certifications-part">
           <li>
-            <i class="fa-li fa fa-trophy text-warning"></i>
-            2<sup>nd</sup>
-            Place - University of Colorado Boulder - Emerging Tech Competition 2008</li>
+            <i class="fa-li fa fa-trophy text-primary"></i>
+            Certificate of Excellence in Machine Learning
+            with Python conducted by CSI RAIT. (2017)</li>
           <li>
-            <i class="fa-li fa fa-trophy text-warning"></i>
-            1<sup>st</sup>
-            Place - James Buchanan High School - Hackathon 2006</li>
+            <i class="fa-li fa fa-trophy text-primary"></i>
+            Qualified for Final Round of Placement Mantra
+            in Techmate 2k15
+          </li>
           <li>
-            <i class="fa-li fa fa-trophy text-warning"></i>
-            3<sup>rd</sup>
-            Place - James Buchanan High School - Hackathon 2005</li>
+            <i class="fa-li fa fa-trophy text-primary"></i>
+            Secured 2nd rank in Science Team Quiz in
+            Junior College.</li>
+          <li>
+            <i class="fa-li fa fa-trophy text-primary"></i>
+            Secured 1st and 2nd rank respectively for Best
+            Presentation Making Competition in Junior
+            College.</li>
+          <li>
+            <i class="fa-li fa fa-trophy text-primary"></i>
+            Secured 130<sup>th</sup> state rank and 1,524 international rank in 10
+            <sup>th</sup> International Informatics Olympiad.</li>
+          <li>
+            <i class="fa-li fa fa-trophy text-primary"></i>
+            Selected amongst top 50 students for ‘I will be
+            the change’ contest organized by HINDUSTAN
+            TIMES NEWSPAPER in the state.
+          </li>
+          <li>
+            <i class="fa-li fa fa-trophy text-primary"></i>
+            Secured 1st rank in Roller skating competition
+            at Karnala Sports Academy.</li>
+          <li>
+            <i class="fa-li fa fa-trophy text-primary"></i>
+            Participated in Udaan - a Short Marathon
+            conducted by Social Wing.</li>
+          <li>
+            <i class="fa-li fa fa-trophy text-primary"></i>
+            Participated in workshops based on Machine
+            Learning, Advanced Web Technologies, and
+            Android App Development.</li>
+          
         </ul>
       </div>
-    </section> -->
+    </section>
 
   </div>
 
