--- a/index.html
+++ b/index.html
@@ -110,10 +110,10 @@
             <p><b>Technologies Used in above projects:</b> Python, Tensorflow, Keras, Open CV, Matplotlib, Yolo Darknet Algorithm, Android Studio. </p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">November 2019 - Present</span>
+            <span class="text-dark">November 2019 - Present</span>
           </div>
         </div>
-
+        
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
             <h3 class="mb-0">Team Leader & Web Development Intern</h3>
@@ -123,10 +123,10 @@
             <p><b>Technologies Used:</b> PHP 7, SQL, JS, jQuery,  AJAX, Bootstrap V4, HTML5, CSS3.</p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">December 2017 - July 2018</span>
+            <span class="text-dark">December 2017 - July 2018</span>
           </div>
         </div>
-
+        
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
             <h3 class="mb-0">Web Development Intern</h3>
@@ -136,7 +136,7 @@
             <p><b>Technologies Used:</b> PHP 5, SQL, JS, HTML5, CSS3.</p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">July 2017 - December 2017</span>
+            <span class="text-dark">July 2017 - December 2017</span>
           </div>
         </div>
 
@@ -159,7 +159,7 @@
             <div>CGPA: 8.08/10</div>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">August 2006 - May 2010</span>
+            <span class="text-dark">August 2006 - May 2010</span>
           </div>
         </div>
 
@@ -170,7 +170,7 @@
             <div>Percentage: 82.46% (Class: Distinction)</div>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">June 2013 - May 2015</span>
+            <span class="text-dark">June 2013 - May 2015</span>
           </div>
         </div>
 
@@ -181,7 +181,7 @@
             <p>Percentage: 83.82% (Class: Distinction)</p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">June 2011 - May 2013</span>
+            <span class="text-dark">June 2011 - May 2013</span>
           </div>
         </div>
 
