--- a/index.html
+++ b/index.html
@@ -317,7 +317,7 @@
             Secured 1st and 2nd rank respectively for Best
             Presentation Making Competition in Junior
             College.</li>
-          <li>
+          <!-- <li>
             <i class="fa-li fa fa-trophy text-primary"></i>
             Secured 130<sup>th</sup> state rank and 1,524 international rank in 10
             <sup>th</sup> International Informatics Olympiad.</li>
@@ -334,7 +334,7 @@
           <li>
             <i class="fa-li fa fa-trophy text-primary"></i>
             Participated in Udaan - a Short Marathon
-            conducted by Social Wing.</li>
+            conducted by Social Wing.</li> -->
           <li>
             <i class="fa-li fa fa-trophy text-primary"></i>
             Participated in workshops based on Machine
