--- a/index.html
+++ b/index.html
@@ -58,6 +58,9 @@
         <li class="nav-item">
           <a class="nav-link js-scroll-trigger" href="#courses">Courses</a>
         </li>
+        <li class="nav-item">
+          <a class="nav-link js-scroll-trigger" href="#research">Research</a>
+        </li>
       </ul>
     </div>
   </nav>
@@ -73,7 +76,9 @@
           <a href="mailto:digant.dg07@gmail.com">digant.dg07@gmail.com</a>
           <p>(Website in Progress ;)</p>
         </div>
-        <!-- <p class="lead mb-5">I am experienced in leveraging agile frameworks to provide a robust synopsis for high level overviews. Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition.</p> -->
+
+        <!-- <p class="lead mb-5">I am experienced in leveraging deep learning frameworks to provide a robust system . Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition.</p> -->
+
         <div class="social-icons">
           <a href="https://linkedin.com/in/digant-garude-3b373a12a" target="_blank">
             <i class="fab fa-linkedin-in"></i>
@@ -258,7 +263,40 @@
     <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="projects">
       <div class="w-100">
         <h2 class="mb-5">Projects</h2>
-        
+
+        <!-- Outfit Recommendation -->
+        <div class="resume-content">
+          <h3 class="mb-0">Outfit Recommendation System using Machine Learning</h3>
+          <div>It is a python based web app running on top of Django Server which uses machine learning techniques such as K Means Clustering and Minimum distance algorithm to extract the skin tone of facial images and Decision Tree Learning to correctly classify outfits into groups and recommend outfits based on skin tone, occasion, size, popularity and other
+          features.</div>
+          <div><b>Technologies Used:</b> Python 3, Django, HTML5, CSS3, JavaScript, jQuery, Bootstrap 4.</div>
+        </div>
+        <br>
+
+        <!-- RAIT Grievance Portal -->
+        <div class="resume-content">
+          <h3 class="mb-0">RAIT Grievance Portal</h3>
+          <div>A web application designed for students and staff of our college to submit their grievances online and get response regarding the action taken by college for their problems.</div>
+          <div><b>Technologies Used:</b> PHP 7, SQL, HTML5, CSS3, JavaScript, Bootstrap v4.</div>
+        </div>
+        <br>
+
+        <!-- Skin tone shade extractor -->
+        <div class="resume-content">
+          <h3 class="mb-0">Skin tone shade extractor</h3>
+          <div>A python project designed to categorize skin tone shades to a specific color. The project uses haar cascade to detect faces and K’ Means Clustering algorithm to detect skin tone and minimum distance to allot skin tone shade. The algorithm is pretty fast and can allot shades with good enough accuracy.</div>
+          <div><b>Technologies Used:</b> Python 3, Sklearn, Numpy, OpenCV, Matplotlib.</div>
+        </div>
+        <br>
+
+        <!-- COLLEGE RESEARCH FORUM  -->
+        <div class="resume-content">
+          <h3 class="mb-0">College Research Forum</h3>
+          <div>A web portal designed for students to interact with their seniors to solve their doubts and gain knowledge regarding college projects.</div>
+          <div><b>Technologies Used:</b> PHP 7, SQL, HTML5, CSS3, JS, jQuery, AJAX, Bootstrap v4.</div>
+        </div>
+        <br>
+
       </div>
     </section>
 
@@ -267,8 +305,9 @@
     <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="interests">
       <div class="w-100">
         <h2 class="mb-5">Interests</h2>
-        <!-- <p>Apart from being a web developer, I enjoy most of my time being outdoors. In the winter, I am an avid skier and novice ice climber. During the warmer months here in Colorado, I enjoy mountain biking, free climbing, and kayaking.</p>
-        <p class="mb-0">When forced indoors, I follow a number of sci-fi and fantasy genre movies and television shows, I am an aspiring chef, and I spend a large amount of my free time exploring the latest technology advancements in the front-end web development world.</p> -->
+        <p class="para">My interests lie in the domain of Artificial Intelligence, Internet of Things, Automation,etc.</p>
+        <p class="mb-3 para">I spend a large amount of my free time exploring the latest technology advancements in the deep learning  world.</p>
+        <p class="mb-3 para">My hobbies are reading, freelancing web-dev projects, watching tech reviews and playing video games all from the Age of Empires to Need for Speed.</p>
       </div>
     </section>
 
@@ -344,6 +383,18 @@
         </ul>
       </div>
     </section>
+
+
+    <!-- RESEARCH -->
+    <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="research">
+      <div class="w-100">
+        <h2 class="mb-5">Research</h2>
+        <p class="para">Published a paper on <b>Skin Tone And Occasion Oriented Outfit Recommendation System</b> in the <i>2nd International Conference on
+        Advances in Science & Technology (ICAST) 2019</i>.</p>
+        <p class="mb-3 para"><b>Link:</b> <a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=3368058">Skin Tone And Occasion Oriented Outfit Recommendation System</a></p>
+      </div>
+    </section>
+
 
   </div>
 
