--- a/index.html
+++ b/index.html
@@ -300,6 +300,7 @@
       </div>
     </section>
 
+    <hr class="m-0">
 
     <!-- INTERESTS -->
     <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="interests">
