Updated Some Stuff

--- a/index.html
+++ b/index.html
@@ -72,8 +72,8 @@
         <h1 class="mb-0">Digant
           <span class="text-primary">Garude</span>
         </h1>
-        <div class="subheading mb-5">B7 Susheel Villa · Panvel, IN 410206 · (986) 999-0548 ·
-          <a href="mailto:digant.dg07@gmail.com">digant.dg07@gmail.com</a>
+        <div class="subheading mb-5">
+          <a href="mailto:digant.dg07@gmail.com">digant [dot] dg07 [at] gmail [dot] com</a>
           <p>(Website in Progress ;)</p>
         </div>
 
@@ -104,6 +104,49 @@
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
+            <h3 class="mb-0">Software Developer</h3>
+            <div class="subheading mb-3">Rejolut Technologies Pvt. Ltd.</div>
+            <p>Worked on the following technologies: </p>
+            <ul class="list-inline">
+              <li class="list-inline-item skills-btn-look">Node</li>
+              <li class="list-inline-item skills-btn-look">Mongo DB</li>
+              <li class="list-inline-item skills-btn-look">Google Cloud EC2, Buckets</li>
+              <li class="list-inline-item skills-btn-look">Firebase Web Push</li>
+              <li class="list-inline-item skills-btn-look">Hedera Hashgraph</li>
+              <li class="list-inline-item skills-btn-look">Paypal</li>
+              <li class="list-inline-item skills-btn-look">Docker</li>
+              <li class="list-inline-item skills-btn-look">Nginx</li>
+              <li class="list-inline-item skills-btn-look">Solidity</li>
+              <li class="list-inline-item skills-btn-look">Smart Contract</li>
+              <li class="list-inline-item skills-btn-look">Brain tree payment integrations</li>
+              <li class="list-inline-item skills-btn-look">Passport.js</li>
+              <li class="list-inline-item skills-btn-look">Sendgrid</li>
+              <li class="list-inline-item skills-btn-look">Mirror Node Hedera</li>
+            </ul>
+            <p>Tools and services used: </p>
+            <ul class="list-inline">
+              <li class="list-inline-item skills-btn-look">Remix Etherium</li>
+              <li class="list-inline-item skills-btn-look">Postman</li>
+              <li class="list-inline-item skills-btn-look">Insomnia</li>
+              <li class="list-inline-item skills-btn-look">Robo 3t</li>
+              <li class="list-inline-item skills-btn-look">Mongo DB Compass</li>
+              <li class="list-inline-item skills-btn-look">Metamask</li>
+              <li class="list-inline-item skills-btn-look">MyHbarWallet</li>
+              <li class="list-inline-item skills-btn-look">Dragonglass</li>
+              <li class="list-inline-item skills-btn-look">Kabuto</li>
+              <li class="list-inline-item skills-btn-look">Gitlab</li>
+              <li class="list-inline-item skills-btn-look">Click Up</li>
+              <li class="list-inline-item skills-btn-look">Slack</li>
+              
+            </ul>
+          </div>
+          <div class="resume-date text-md-right">
+            <span class="text-dark">October 2020 - Present</span>
+          </div>
+        </div>
+
+        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
+          <div class="resume-content">
             <h3 class="mb-0">Deep Learning Intern</h3>
             <div class="subheading mb-3">Concerto Software & Systems</div>
             <p>Worked on the following projects :</p>
@@ -115,7 +158,7 @@
             <p><b>Technologies Used in above projects:</b> Python, Tensorflow, Keras, Open CV, Matplotlib, Yolo Darknet Algorithm, Android Studio. </p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-dark">November 2019 - Present</span>
+            <span class="text-dark">November 2019 - April 2020</span>
           </div>
         </div>
         
@@ -202,12 +245,14 @@
         <div class="subheading mb-3">Programming Languages</div>
         <ul class="list-inline">
           <li class="list-inline-item skills-btn-look">Python</li>
+          <li class="list-inline-item skills-btn-look">JavaScript</li>
           <li class="list-inline-item skills-btn-look">C</li>
           <li class="list-inline-item skills-btn-look">C++</li>
           <li class="list-inline-item skills-btn-look">Java</li>
           <li class="list-inline-item skills-btn-look">PHP</li>
           <li class="list-inline-item skills-btn-look">SQL</li>
-          <li class="list-inline-item skills-btn-look">JavaScript</li>
+          <li class="list-inline-item skills-btn-look">Mongo DB</li>
+          <li class="list-inline-item skills-btn-look">Solidity</li>
           <li class="list-inline-item skills-btn-look">HTML5</li>
           <li class="list-inline-item skills-btn-look">CSS3</li>
           <li class="list-inline-item skills-btn-look">Bash</li>
@@ -219,6 +264,9 @@
           <li class="list-inline-item skills-btn-look">Tensorflow</li>
           <li class="list-inline-item skills-btn-look">Keras</li>
           <li class="list-inline-item skills-btn-look">Django</li>
+          <li class="list-inline-item skills-btn-look">Express</li>
+          <li class="list-inline-item skills-btn-look">React</li>
+          <li class="list-inline-item skills-btn-look">Strapi</li>
           <li class="list-inline-item skills-btn-look">jQuery</li>
           <li class="list-inline-item skills-btn-look">AJAX</li>
           <li class="list-inline-item skills-btn-look">Bootstrap</li>
@@ -228,11 +276,21 @@
         <ul class="list-inline">
           <li class="list-inline-item skills-btn-look">Android Studio</li>
           <li class="list-inline-item skills-btn-look">Github</li>
+          <li class="list-inline-item skills-btn-look">Google Cloud SDK</li>
           <li class="list-inline-item skills-btn-look">Firebase</li>
+          <li class="list-inline-item skills-btn-look">Docker</li>
+          <li class="list-inline-item skills-btn-look">Nginx</li>
+          <li class="list-inline-item skills-btn-look">Paypal</li>
+          <li class="list-inline-item skills-btn-look">Hedera Hashgraph</li>
+          <li class="list-inline-item skills-btn-look">Remix Ethereium</li>
+          <li class="list-inline-item skills-btn-look">Smart Contract Development</li>
+          <li class="list-inline-item skills-btn-look">Brain Tree payment</li>
+          <li class="list-inline-item skills-btn-look">Passport.js</li>
+          <li class="list-inline-item skills-btn-look">Sendgrid</li>
+          <li class="list-inline-item skills-btn-look">Mirror Node Hedera</li>
           <li class="list-inline-item skills-btn-look">R Studio</li>
           <li class="list-inline-item skills-btn-look">Xampp</li>
           <li class="list-inline-item skills-btn-look">Atlassian</li>
-          <li class="list-inline-item skills-btn-look">Google Cloud SDK</li>
           <li class="list-inline-item skills-btn-look">Jupyter Notebook</li>
           <li class="list-inline-item skills-btn-look">Spyder</li>
           <li class="list-inline-item skills-btn-look">Oracle DB</li>
