--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
           <span class="text-primary">Garude</span>
         </h1>
         <div class="subheading mb-5">
-          <a href="mailto:digant.dg07@gmail.com">digant [dot] dg07 [at] gmail [dot] com</a>
+          <p>digant.dg07 (at) gmail.com</p>
           <p>(Website in Progress ;)</p>
         </div>
 
