--- a/index.html
+++ b/index.html
@@ -74,24 +74,24 @@
         </h1>
         <div class="subheading mb-5">
           <p>digant.dg07 (at) gmail.com</p>
-          <p>(Website in Progress ;)</p>
+          
         </div>
-
+        <p class="lead mb-5">Currently pursuing <b>Masters in Computer Science at University at Buffalo, NY</b></p>
         <!-- <p class="lead mb-5">I am experienced in leveraging deep learning frameworks to provide a robust system . Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition.</p> -->
 
         <div class="social-icons">
-          <a href="https://linkedin.com/in/digant-garude-3b373a12a" target="_blank">
+          <a href="https://linkedin.com/in/digantgarude" target="_blank">
             <i class="fab fa-linkedin-in"></i>
           </a>
           <a href="https://github.com/digantgarude" target="_blank">
             <i class="fab fa-github"></i>
           </a>
-          <a href="https://api.whatsapp.com/send?phone=+919869990548&amp;forceIntent=true&amp;load=loadInIOSExternalSafari">
+          <!-- <a href="https://api.whatsapp.com/send?phone=+NUMBER&amp;forceIntent=true&amp;load=loadInIOSExternalSafari">
             <i class="fab fa-whatsapp"></i>
-          </a>
-          <a href="#">
+          </a> -->
+          <!-- <a href="#">
             <i class="fab fa-instagram"></i>
-          </a>
+          </a> -->
         </div>
       </div>
     </section>
@@ -167,7 +167,7 @@
             <h3 class="mb-0">Team Leader & Web Development Intern</h3>
             <div class="subheading mb-3">Software Development Group - RAIT</div>
             <p><b>Project:</b> RAIT College Website & Faculty Details Management System</p>
-            <p><b>Work:</b> Successfully guided a team of 10 and developed a full-fledged dynamic & responsive  </p>
+            <p><b>Work:</b> Successfully guided a team of 10 and developed a full-fledged dynamic & responsive college website with faculty management system integrated in it.</p>
             <p><b>Technologies Used:</b> PHP 7, SQL, JS, jQuery,  AJAX, Bootstrap V4, HTML5, CSS3.</p>
           </div>
           <div class="resume-date text-md-right">
